# uber_backend

./: .dockerignore  .env  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.LocationManager  Dockerfile.UserManager  Dockerfile.base  LICENSE  README.md  SECURITY.md  conanfile.py  docker-compose.yml  dockerCMD.txt  entrypoint.sh  entrypointLocationManager.sh  entrypointRideManager.sh  entrypointUserManager.sh  notes.txt  setup_wsl_env.sh  testMode.txt
.github/workflows/: docker-ci.yml  docker-compose.yml  docker-test-deploy.yml  (+1 more)
LocationManager/: CMakeLists.txt
LocationManager/include/: server.h
LocationManager/include/database/: database.h
LocationManager/include/models/: user.h
LocationManager/include/services/h3Handler/: h3Handler.h
LocationManager/include/services/httpHandler/: httpHandler.h
LocationManager/include/services/httpHandler/servers/: httpLocationServer.h
LocationManager/include/services/kafkaHandler/consumer/: userKafkaManager.h
LocationManager/include/services/redisHandler/: redisHandler.h
LocationManager/include/services/routeHandler/: routehandler.h
LocationManager/sql_scripts/: database_del.sql  database_init.sql
LocationManager/src/: main.cpp  server.cpp
LocationManager/src/database/: database.cpp
LocationManager/src/models/: user.cpp
LocationManager/src/services/h3Handler/: h3Handler.cpp
LocationManager/src/services/httpHandler/: httpHandler.cpp
LocationManager/src/services/httpHandler/servers/: httpLocationServer.cpp
LocationManager/src/services/kafkaHandler/consumer/: userKafkaManager.cpp
LocationManager/src/services/redisHandler/: redisHandler.cpp
LocationManager/src/services/routeHandler/: routeHandler.cpp
RideManager/: CMakeLists.txt
RideManager/include/: server.h
RideManager/include/services/httpHandler/: httpHandler.h
RideManager/include/services/httpHandler/servers/: httpRideServer.h
RideManager/include/services/kafkaHandler/: rideKafkaManager.h
RideManager/include/services/location/: locationGateway.h
RideManager/include/services/rabbitHandler/: rideRabbitManager.h
RideManager/include/services/routeHandler/: rideRouteHandler.h
RideManager/sql_scripts/: database_init.sql
RideManager/src/: main.cpp  server.cpp
RideManager/src/services/httpHandler/: httpHandler.cpp
RideManager/src/services/httpHandler/servers/: httpRideServer.cpp
RideManager/src/services/kafkaHandler/: rideKafkaManager.cpp
RideManager/src/services/location/: locationGateway.cpp
RideManager/src/services/rabbitHandler/: rideRabbitManager.cpp
RideManager/src/services/routeHandler/: rideRouteHandler.cpp
RideManager/src/utils/: secrets.h
UserManager/: CMakeLists.txt
UserManager/include/: server.h
UserManager/include/database/: UserDBManager.h  database.h  userDBManager.h
UserManager/include/models/: bankDetails.h  driver.h  paymentDetails.h  rider.h  user.h  vehicalDetails.h  vehicleDetails.h
UserManager/include/models/user/: user.h
UserManager/include/services/httpHandler/: httpHandler.h
UserManager/include/services/httpHandler/clients/: httpClient.h
UserManager/include/services/httpHandler/servers/: httpServer.h  httpUserServer.h
UserManager/include/services/httpService/: httpClient.h  httpServer.h  httpService.h
UserManager/include/services/kafkaHandler/producer/: userKafkaManager.h
UserManager/include/services/routeHandler/: routeHandler.h
UserManager/include/utils/: config.h  secrets.h
UserManager/sql_scripts/: database_del.sql  database_init.sql
UserManager/src/: main.cpp  server.cpp
UserManager/src/database/: database.cpp  userDBManager.cpp
UserManager/src/models/: bankDetails.cpp  driver.cpp  paymentDetails.cpp  rider.cpp  user.cpp  vehicalDetails.cpp  vehicleDetails.cpp
UserManager/src/services/httpHandler/: httpClient.cpp  httpHandler.cpp  httpServer.cpp
UserManager/src/services/httpHandler/Servers/: httpServer.cpp  httpUserServer.cpp
UserManager/src/services/httpHandler/clients/: httpClient.cpp
UserManager/src/services/httpService/: httpClient.cpp  httpServer.cpp  httpService.cpp
UserManager/src/services/kafkaHandler/producers/: userKafkaManager.cpp
UserManager/src/services/routeHandler/: routeHandler.cpp
docker/: Dockerfile.LocationManager  Dockerfile.RideManager  Dockerfile.UserManager  Dockerfile.base  docker-compose.kafka_cluster.yml  docker-compose.redis_server.yml  docker-compose.test-deploy.yml  docker-compose.yml  dockerCMD.txt  install_dependencies.sh
docs/: code_review.md  docker_compose_validation_report.md  docker_e2e_test_plan.md  ride_lifecycle_settlement.md  system_validation_scenarios.md
proto/: location.grpc.pb.cc  location.grpc.pb.h  location.pb.cc  location.pb.h  location.proto
scripts/: test_usermanager_workflow.sh
sharedResources/: CMakeLists.txt
sharedResources/include/: sharedDatabase.h  sharedHTTPClient.h  sharedHTTPHandler.h  sharedHTTPServer.h  sharedKafkaConsumer.h  sharedKafkaHandler.h  sharedKafkaProducer.h  sharedRabbitMQConsumer.h  sharedRabbitMQHandler.h  sharedRabbitMQProducer.h  sharedRouteHandler.h  sharedServer.h  sharedgRPCClient.h  sharedgRPCServer.h
sharedResources/include/database/: MySQLDatabase.h  index.h
sharedResources/include/h3/: index.h
sharedResources/include/kafka/: index.h
sharedResources/src/: sharedDatabase.cpp  sharedHTTPClient.cpp  sharedHTTPHandler.cpp  sharedHTTPServer.cpp  sharedKafkaConsumer.cpp  sharedKafkaHandler.cpp  sharedKafkaProducer.cpp  sharedRabbitMQConsumer.cpp  sharedRabbitMQHandler.cpp  sharedRabbitMQProducer.cpp  sharedRouteHandler.cpp  sharedServer.cpp  sharedgRPCClienth.cpp  sharedgRPCServer.cpp
sharedResources/src/database/: MySQLDatabase.cpp
sharedResources/src/h3/: H3Stub.cpp
sharedResources/src/kafka/: KafkaStub.cpp
sharedUtils/: CMakeLists.txt  config.h  jwt.h
sharedUtils/include/: config.h  jwt.h
sharedUtils/include/algorithms/sha256/: index.h
sharedUtils/include/utils/: index.h  time.h
sharedUtils/src/: algorithms_sha256.cpp  config.cpp  jwt.cpp  time.cpp  utils.cpp
sql_scripts/: database_init.sql
src/: main.cpp
(+10 files in other folders)
